crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__array__tests__empty.snap
---
source: crates/alder-parse/src/pattern/array.rs
description: "[]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Array {
        elements: [],
        rest: None,
    },
}
