crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__array__tests__error_rest_no_comma.snap
---
source: crates/alder-parse/src/pattern/array.rs
description: "[..rest x]"
---
Array(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 8,
            },
            unexpected: Position {
                line: 1,
                column: 9,
            },
        },
    ),
    1,
    1,
)
