crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__array__tests__error_rest_not_last.snap
---
source: crates/alder-parse/src/pattern/array.rs
description: "[..rest, x]"
---
Array(
    RestNotLast(
        1,
        10,
    ),
    1,
    1,
)
