crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__array__tests__error_rest_reserved_name.snap
---
source: crates/alder-parse/src/pattern/array.rs
description: "[..type]"
---
Array(
    RestName(
        1,
        4,
    ),
    1,
    1,
)
