crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__array__tests__error_unclosed.snap
---
source: crates/alder-parse/src/pattern/array.rs
description: "[a, b"
---
Array(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 6,
            },
            unexpected: Position {
                line: 1,
                column: 6,
            },
        },
    ),
    1,
    1,
)
