crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__array__tests__multiple.snap
---
source: crates/alder-parse/src/pattern/array.rs
description: "[a, b, c]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Array {
        elements: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 6,
                    },
                },
                value: Var(
                    "b",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: Var(
                    "c",
                ),
            },
        ],
        rest: None,
    },
}
