crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__array__tests__rest_named.snap
---
source: crates/alder-parse/src/pattern/array.rs
description: "[first, ..rest]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 16,
        },
    },
    value: Array {
        elements: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 7,
                    },
                },
                value: Var(
                    "first",
                ),
            },
        ],
        rest: Some(
            ArrayRest {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Position {
                        line: 1,
                        column: 15,
                    },
                },
                name: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 11,
                            },
                            end: Position {
                                line: 1,
                                column: 15,
                            },
                        },
                        value: "rest",
                    },
                ),
            },
        ),
    },
}
