crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__array__tests__rest_only.snap
---
source: crates/alder-parse/src/pattern/array.rs
description: "[..]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Array {
        elements: [],
        rest: Some(
            ArrayRest {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                name: None,
            },
        ),
    },
}
