crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__array__tests__rest_trailing_comma.snap
---
source: crates/alder-parse/src/pattern/array.rs
description: "[a, ..rest,]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 13,
        },
    },
    value: Array {
        elements: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        ],
        rest: Some(
            ArrayRest {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                name: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 7,
                            },
                            end: Position {
                                line: 1,
                                column: 11,
                            },
                        },
                        value: "rest",
                    },
                ),
            },
        ),
    },
}
