crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__array__tests__single.snap
---
source: crates/alder-parse/src/pattern/array.rs
description: "[a]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Array {
        elements: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        ],
        rest: None,
    },
}
